# ai_agent_crash_course

./: .gitignore
aihero/Day_1/: Day_1.md
aihero/Day_2/: Day_2.md  main.ipynb  pyproject.toml
aihero/Day_3/: Day_3.md  main.ipynb  pyproject.toml
aihero/Day_4/: Day_4.md  main.ipynb
aihero/Day_5/: Day_5.md  main.ipynb  pyproject.toml
aihero/Day_6/: Day_6.md  README.md  app.py  main.ipynb  main.py  pyproject.toml  search_agent.py
aihero/course/: main.py
aihero/project/: main.py
