[project]
name = "day-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "minsearch>=0.0.5",
    "mistral>=20.1.0",
    "mistralai>=1.9.10",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.0.13",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
